--- a/plot.html
+++ b/plot.html
@@ -17,59 +17,186 @@
   "data": [
     {
       "type": "scatter",
+      "name": "Johanna Forssén",
       "x": [
-        "2021-December",
-        "2022-January",
-        "2022-February",
-        "2022-March",
-        "2022-April",
-        "2022-May",
-        "2022-June",
-        "2022-August",
-        "2022-September",
-        "2022-October",
-        "2022-November",
-        "2022-December",
-        "2023-January",
-        "2023-February",
-        "2023-March",
-        "2023-April",
-        "2023-May",
-        "2023-June",
-        "2023-July",
-        "2023-August",
-        "2023-September",
-        "2023-October",
-        "2023-November",
-        "2023-December",
-        "2024-January"
+        "2022-09",
+        "2022-10",
+        "2022-11",
+        "2022-12",
+        "2023-01",
+        "2023-02",
+        "2023-03",
+        "2023-04",
+        "2023-05",
+        "2023-06",
+        "2023-07",
+        "2023-08",
+        "2023-09",
+        "2023-10",
+        "2023-11",
+        "2023-12",
+        "2024-01"
       ],
       "y": [
-        "18",
-        "6",
-        "76",
-        "39",
-        "3",
-        "8",
-        "11",
-        "1",
-        "65",
-        "139",
-        "108",
-        "54",
-        "40",
-        "108",
-        "172",
-        "83",
-        "74",
-        "56",
-        "31",
-        "27",
-        "56",
-        "78",
-        "110",
-        "50",
-        "6"
+        24,
+        41,
+        34,
+        24,
+        24,
+        40,
+        41,
+        19,
+        33,
+        23,
+        4,
+        7,
+        21,
+        13,
+        20,
+        7,
+        1
+      ]
+    },
+    {
+      "type": "scatter",
+      "name": "Pontus Backman",
+      "x": [
+        "2022-09",
+        "2022-10",
+        "2022-11",
+        "2022-12",
+        "2023-01",
+        "2023-02",
+        "2023-03",
+        "2023-04",
+        "2023-05",
+        "2023-06",
+        "2023-07",
+        "2023-09",
+        "2023-10",
+        "2023-11",
+        "2023-12"
+      ],
+      "y": [
+        27,
+        37,
+        20,
+        11,
+        12,
+        20,
+        27,
+        25,
+        17,
+        10,
+        13,
+        4,
+        15,
+        24,
+        1
+      ]
+    },
+    {
+      "type": "scatter",
+      "name": "Dardan Dauti",
+      "x": [
+        "2022-01",
+        "2022-02",
+        "2022-03",
+        "2022-05",
+        "2022-10",
+        "2022-11"
+      ],
+      "y": [
+        1,
+        10,
+        5,
+        1,
+        5,
+        1
+      ]
+    },
+    {
+      "type": "scatter",
+      "name": "Björn Bergquist",
+      "x": [
+        "2022-09",
+        "2022-10",
+        "2022-11"
+      ],
+      "y": [
+        2,
+        11,
+        8
+      ]
+    },
+    {
+      "type": "scatter",
+      "name": "Mattias Nordqvist",
+      "x": [
+        "2021-12",
+        "2022-01",
+        "2022-02",
+        "2022-03",
+        "2022-04",
+        "2022-05",
+        "2022-06",
+        "2022-08",
+        "2022-09",
+        "2022-10",
+        "2022-11",
+        "2022-12",
+        "2023-01",
+        "2023-02",
+        "2023-03",
+        "2023-04",
+        "2023-05",
+        "2023-06",
+        "2023-07",
+        "2023-08",
+        "2023-09",
+        "2023-10",
+        "2023-11",
+        "2023-12",
+        "2024-01"
+      ],
+      "y": [
+        18,
+        5,
+        66,
+        33,
+        2,
+        7,
+        11,
+        1,
+        12,
+        45,
+        45,
+        19,
+        4,
+        48,
+        104,
+        39,
+        24,
+        23,
+        14,
+        20,
+        31,
+        50,
+        66,
+        42,
+        5
+      ]
+    },
+    {
+      "type": "scatter",
+      "name": "Jonas Bergdahl Chi",
+      "x": [
+        "2022-03",
+        "2022-04"
+      ],
+      "y": [
+        1,
+        1
       ]
     }
   ],
