--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
     <title>Toki2</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="app"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
