--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Toki2</title>
   </head>
-  <body class="dark">
+  <body>
+    <script>
+      // Prevent flash of wrong theme on load
+      (function() {
+        var stored = localStorage.getItem('toki-theme');
+        var theme = stored === 'light' || stored === 'dark' ? stored : null;
+        if (!theme) {
+          theme = window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
+        }
+        document.documentElement.classList.add(theme);
+      })();
+    </script>
     <div id="app"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
