--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,11 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Toki2</title>
+
+    <!-- Google Fonts: Manrope, IBM Plex Sans, IBM Plex Mono -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&family=IBM+Plex+Sans:wght@400;500;600&family=IBM+Plex+Mono:wght@400;500&display=swap">
   </head>
   <body>
     <script>
