--- a/app/index.html
+++ b/app/index.html
@@ -13,8 +13,24 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Toki2</title>
+
+    <!-- Google Fonts: Manrope, IBM Plex Sans, IBM Plex Mono -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&family=IBM+Plex+Sans:wght@400;500;600&family=IBM+Plex+Mono:wght@400;500&display=swap">
   </head>
-  <body class="dark">
+  <body>
+    <script>
+      // Prevent flash of wrong theme on load
+      (function() {
+        var stored = localStorage.getItem('toki-theme');
+        var theme = stored === 'light' || stored === 'dark' ? stored : null;
+        if (!theme) {
+          theme = window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
+        }
+        document.documentElement.classList.add(theme);
+      })();
+    </script>
     <div id="app"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
